# secrets-garden

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  PRODUCTION_READINESS.md  README.md  SECURITY.md  main.py  pyproject.toml
.claude/agents/: crypto-security-auditor.md  dependency-security-manager.md  documentation-maintainer.md  lint-format-enforcer.md  test-coverage-monitor.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_issue.md
.github/workflows/: ci.yml  release.yml
secrets_garden/: __init__.py  __main__.py  exceptions.py  security.py
secrets_garden/cli/: __init__.py  commands.py  main.py
secrets_garden/config/: __init__.py  settings.py
secrets_garden/vault/: __init__.py  crypto.py  database.py  manager.py
tests/: __init__.py  conftest.py  test_cli.py  test_crypto.py  test_database.py  test_vault.py
